[package]
name = "Bluebottle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
mio = "0.8.10"
mongodb = "2.8.0"
tokio = { version = "1.2.4", features = ["full"] }
trust-dns-resolver = { version = "0.21.2", features = ["system-config"] }
